--- a/public/css/app.css
+++ b/public/css/app.css
@@ -622,6 +622,17 @@ select {
     max-width: 1280px;
   }
 }
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
+}
 .invisible {
   visibility: hidden;
 }
@@ -686,6 +697,10 @@ select {
   margin-left: 2.5rem;
   margin-right: 2.5rem;
 }
+.mx-6 {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+}
 .my-auto {
   margin-top: auto;
   margin-bottom: auto;
@@ -732,14 +747,14 @@ select {
 .mt-5 {
   margin-top: 1.25rem;
 }
+.mb-16 {
+  margin-bottom: 4rem;
+}
 .mb-5 {
   margin-bottom: 1.25rem;
 }
 .mb-8 {
   margin-bottom: 2rem;
-}
-.mb-16 {
-  margin-bottom: 4rem;
 }
 .mb-6 {
   margin-bottom: 1.5rem;
@@ -825,6 +840,18 @@ select {
 .h-60 {
   height: 15rem;
 }
+.h-24 {
+  height: 6rem;
+}
+.h-8 {
+  height: 2rem;
+}
+.h-1\.5 {
+  height: 0.375rem;
+}
+.h-1 {
+  height: 0.25rem;
+}
 .h-45vh {
   height: 45vh;
 }
@@ -839,12 +866,6 @@ select {
 }
 .h-28rem {
   height: 28rem;
-}
-.h-full {
-  height: 100%;
-}
-.h-8 {
-  height: 2rem;
 }
 .h-7 {
   height: 1.75rem;
@@ -876,6 +897,18 @@ select {
 .w-3\/12 {
   width: 25%;
 }
+.w-1\/3 {
+  width: 33.333333%;
+}
+.w-10\/12 {
+  width: 83.333333%;
+}
+.w-64 {
+  width: 16rem;
+}
+.w-8 {
+  width: 2rem;
+}
 .w-32rem {
   width: 32rem;
 }
@@ -887,9 +920,6 @@ select {
 }
 .w-20 {
   width: 5rem;
-}
-.w-8 {
-  width: 2rem;
 }
 .w-7 {
   width: 1.75rem;
@@ -999,14 +1029,14 @@ select {
      -moz-appearance: none;
           appearance: none;
 }
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 .grid-cols-8 {
   grid-template-columns: repeat(8, minmax(0, 1fr));
-}
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 .grid-rows-2 {
   grid-template-rows: repeat(2, minmax(0, 1fr));
@@ -1104,6 +1134,9 @@ select {
 .border-b-2 {
   border-bottom-width: 2px;
 }
+.border-b-4 {
+  border-bottom-width: 4px;
+}
 .border-l-4 {
   border-left-width: 4px;
 }
@@ -1135,6 +1168,10 @@ select {
 }
 .border-transparent {
   border-color: transparent;
+}
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(25 25 25 / var(--tw-border-opacity));
 }
 .border-greenc {
   --tw-border-opacity: 1;
@@ -1295,6 +1332,9 @@ select {
 .p-6 {
   padding: 1.5rem;
 }
+.p-3 {
+  padding: 0.75rem;
+}
 .p-4 {
   padding: 1rem;
 }
@@ -1345,13 +1385,13 @@ select {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
 }
-.py-8 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
 .py-16 {
   padding-top: 4rem;
   padding-bottom: 4rem;
+}
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 .px-0 {
   padding-left: 0px;
@@ -1392,6 +1432,15 @@ select {
 .pt-6 {
   padding-top: 1.5rem;
 }
+.pl-11 {
+  padding-left: 2.75rem;
+}
+.pb-11 {
+  padding-bottom: 2.75rem;
+}
+.pb-8 {
+  padding-bottom: 2rem;
+}
 .pr-4 {
   padding-right: 1rem;
 }
@@ -1422,6 +1471,9 @@ select {
 .align-middle {
   vertical-align: middle;
 }
+.align-bottom {
+  vertical-align: bottom;
+}
 .font-sans {
   font-family: Nunito, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
@@ -1445,13 +1497,13 @@ select {
   font-size: 1.5rem;
   line-height: 2rem;
 }
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
 .text-5xl {
   font-size: 3rem;
   line-height: 1;
+}
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 .text-lg {
   font-size: 1.125rem;
@@ -1534,6 +1586,10 @@ select {
   --tw-text-opacity: 1;
   color: rgb(25 25 25 / var(--tw-text-opacity));
 }
+.text-red-500 {
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
+}
 .text-gray-900 {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
@@ -1553,10 +1609,6 @@ select {
 .text-indigo-600 {
   --tw-text-opacity: 1;
   color: rgb(79 70 229 / var(--tw-text-opacity));
-}
-.text-red-500 {
-  --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 .text-gray-200 {
   --tw-text-opacity: 1;
@@ -1819,13 +1871,17 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(185 28 28 / var(--tw-bg-opacity));
 }
-.hover\:bg-black:hover {
+.hover\:bg-gray-50:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(25 25 25 / var(--tw-bg-opacity));
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
 .hover\:bg-greenh:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(0 140 121 / var(--tw-bg-opacity));
+}
+.hover\:bg-black:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(25 25 25 / var(--tw-bg-opacity));
 }
 .hover\:bg-green-800:hover {
   --tw-bg-opacity: 1;
@@ -1838,10 +1894,6 @@ select {
 .hover\:bg-gray-700:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(55 65 81 / var(--tw-bg-opacity));
-}
-.hover\:bg-gray-50:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
 .hover\:bg-opacity-95:hover {
   --tw-bg-opacity: 0.95;
@@ -2058,6 +2110,15 @@ select {
 .group:hover .group-hover\:text-black {
   --tw-text-opacity: 1;
   color: rgb(25 25 25 / var(--tw-text-opacity));
+}
+.peer:checked ~ .peer-checked\:ring-4 {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+.peer:checked ~ .peer-checked\:ring-greenc {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(0 191 165 / var(--tw-ring-opacity));
 }
 .peer:-moz-placeholder-shown ~ .peer-placeholder-shown\:translate-y-0 {
   --tw-translate-y: 0px;
