--- a/public/css/app.css
+++ b/public/css/app.css
@@ -754,6 +754,12 @@ select {
 .mb-6 {
   margin-bottom: 1.5rem;
 }
+.ml-auto {
+  margin-left: auto;
+}
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
 .mb-16 {
   margin-bottom: 4rem;
 }
@@ -768,9 +774,6 @@ select {
 }
 .mb-8 {
   margin-bottom: 2rem;
-}
-.mb-2 {
-  margin-bottom: 0.5rem;
 }
 .mt-1 {
   margin-top: 0.25rem;
@@ -787,9 +790,6 @@ select {
 .ml-2 {
   margin-left: 0.5rem;
 }
-.ml-auto {
-  margin-left: auto;
-}
 .mr-4 {
   margin-right: 1rem;
 }
@@ -801,6 +801,9 @@ select {
 }
 .-mt-px {
   margin-top: -1px;
+}
+.ml-6 {
+  margin-left: 1.5rem;
 }
 .block {
   display: block;
@@ -847,6 +850,9 @@ select {
 .h-60 {
   height: 15rem;
 }
+.h-28rem {
+  height: 28rem;
+}
 .h-24 {
   height: 6rem;
 }
@@ -864,9 +870,6 @@ select {
 }
 .h-20 {
   height: 5rem;
-}
-.h-28rem {
-  height: 28rem;
 }
 .h-7 {
   height: 1.75rem;
@@ -1036,11 +1039,11 @@ select {
 .grid-flow-row {
   grid-auto-flow: row;
 }
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-}
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 .grid-cols-8 {
   grid-template-columns: repeat(8, minmax(0, 1fr));
@@ -1075,11 +1078,11 @@ select {
 .justify-items-center {
   justify-items: center;
 }
-.gap-4 {
-  gap: 1rem;
-}
 .gap-6 {
   gap: 1.5rem;
+}
+.gap-4 {
+  gap: 1rem;
 }
 .space-x-8 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
@@ -1152,6 +1155,9 @@ select {
 }
 .border-r {
   border-right-width: 1px;
+}
+.border-t-4 {
+  border-top-width: 4px;
 }
 .border-solid {
   border-style: solid;
@@ -1308,23 +1314,23 @@ select {
 .bg-manga {
   background-image: url('/img/manga.jpg');
 }
+.bg-100\% {
+  background-size: 100%;
+}
 .bg-cover {
   background-size: cover;
 }
 .bg-contain {
   background-size: contain;
 }
-.bg-100\% {
-  background-size: 100%;
-}
 .bg-clip-padding {
   background-clip: padding-box;
 }
-.bg-center {
-  background-position: center;
-}
 .bg-top {
   background-position: top;
+}
+.bg-center {
+  background-position: center;
 }
 .bg-no-repeat {
   background-repeat: no-repeat;
@@ -1470,6 +1476,9 @@ select {
 .pt-1 {
   padding-top: 0.25rem;
 }
+.pr-2 {
+  padding-right: 0.5rem;
+}
 .text-left {
   text-align: left;
 }
@@ -1515,13 +1524,13 @@ select {
   font-size: 3rem;
   line-height: 1;
 }
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
+}
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 .text-xs {
   font-size: 0.75rem;
