--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1272,6 +1272,14 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(254 226 226 / var(--tw-bg-opacity));
 }
+.bg-gray-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
+}
+.bg-gray-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
 .bg-opacity-40 {
   --tw-bg-opacity: 0.4;
 }
@@ -1452,10 +1460,6 @@ select {
 .px-1 {
   padding-left: 0.25rem;
   padding-right: 0.25rem;
-}
-.px-11 {
-  padding-left: 2.75rem;
-  padding-right: 2.75rem;
 }
 .pt-2 {
   padding-top: 0.5rem;
@@ -2005,6 +2009,9 @@ select {
 .focus\:z-10:focus {
   z-index: 10;
 }
+.focus\:border-none:focus {
+  border-style: none;
+}
 .focus\:border-blue-300:focus {
   --tw-border-opacity: 1;
   border-color: rgb(147 197 253 / var(--tw-border-opacity));
@@ -2032,6 +2039,9 @@ select {
 .focus\:border-greenc:focus {
   --tw-border-opacity: 1;
   border-color: rgb(0 191 165 / var(--tw-border-opacity));
+}
+.focus\:border-transparent:focus {
+  border-color: transparent;
 }
 .focus\:bg-gray-100:focus {
   --tw-bg-opacity: 1;
@@ -2068,6 +2078,10 @@ select {
 .focus\:text-gray-800:focus {
   --tw-text-opacity: 1;
   color: rgb(31 41 55 / var(--tw-text-opacity));
+}
+.focus\:text-black:focus {
+  --tw-text-opacity: 1;
+  color: rgb(25 25 25 / var(--tw-text-opacity));
 }
 .focus\:shadow-lg:focus {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
@@ -2357,8 +2371,16 @@ select {
     display: block;
   }
 
+  .md\:hidden {
+    display: none;
+  }
+
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .md\:pb-2 {
+    padding-bottom: 0.5rem;
   }
 }
 @media (min-width: 1024px) {
@@ -2377,6 +2399,10 @@ select {
 
   .lg\:mb-0 {
     margin-bottom: 0px;
+  }
+
+  .lg\:block {
+    display: block;
   }
 
   .lg\:flex {
@@ -2427,6 +2453,18 @@ select {
     justify-content: space-between;
   }
 
+  .lg\:bg-mha {
+    background-image: url('/img/mha.jpg');
+  }
+
+  .lg\:bg-cover {
+    background-size: cover;
+  }
+
+  .lg\:bg-top {
+    background-position: top;
+  }
+
   .lg\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
@@ -2446,6 +2484,14 @@ select {
     display: block;
   }
 
+  .xl\:hidden {
+    display: none;
+  }
+
+  .xl\:h-45vh {
+    height: 45vh;
+  }
+
   .xl\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -2456,6 +2502,18 @@ select {
 
   .xl\:gap-6 {
     gap: 1.5rem;
+  }
+
+  .xl\:bg-mha {
+    background-image: url('/img/mha.jpg');
+  }
+
+  .xl\:bg-cover {
+    background-size: cover;
+  }
+
+  .xl\:bg-top {
+    background-position: top;
   }
 }
 
