--- a/public/css/app.css
+++ b/public/css/app.css
@@ -795,14 +795,14 @@ select {
 .ml-4 {
   margin-left: 1rem;
 }
+.mr-4 {
+  margin-right: 1rem;
+}
 .mt-4 {
   margin-top: 1rem;
 }
 .ml-2 {
   margin-left: 0.5rem;
-}
-.mr-4 {
-  margin-right: 1rem;
 }
 .mt-8 {
   margin-top: 2rem;
@@ -813,14 +813,8 @@ select {
 .-mt-px {
   margin-top: -1px;
 }
-.mt-10 {
-  margin-top: 2.5rem;
-}
-.ml-5 {
-  margin-left: 1.25rem;
-}
-.mr-auto {
-  margin-right: auto;
+.mt-16 {
+  margin-top: 4rem;
 }
 .block {
   display: block;
@@ -894,17 +888,14 @@ select {
 .h-12 {
   height: 3rem;
 }
+.h-96 {
+  height: 24rem;
+}
 .h-20 {
   height: 5rem;
 }
 .h-7 {
   height: 1.75rem;
-}
-.h-96 {
-  height: 24rem;
-}
-.h-auto {
-  height: auto;
 }
 .min-h-screen {
   min-height: 100vh;
@@ -966,6 +957,11 @@ select {
 .w-20 {
   width: 5rem;
 }
+.w-fit {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
 .w-7 {
   width: 1.75rem;
 }
@@ -975,11 +971,23 @@ select {
 .w-48 {
   width: 12rem;
 }
-.w-24 {
-  width: 6rem;
+.w-80 {
+  width: 20rem;
 }
-.w-32 {
-  width: 8rem;
+.w-2\/3 {
+  width: 66.666667%;
+}
+.w-2\/5 {
+  width: 40%;
+}
+.w-3\/5 {
+  width: 60%;
+}
+.w-3\/6 {
+  width: 50%;
+}
+.w-1\/2 {
+  width: 50%;
 }
 .min-w-0 {
   min-width: 0px;
@@ -1110,9 +1118,6 @@ select {
 .flex-wrap {
   flex-wrap: wrap;
 }
-.items-start {
-  align-items: flex-start;
-}
 .items-end {
   align-items: flex-end;
 }
@@ -1182,14 +1187,6 @@ select {
   border-top-right-radius: 0.375rem;
   border-bottom-right-radius: 0.375rem;
 }
-.rounded-l {
-  border-top-left-radius: 0.25rem;
-  border-bottom-left-radius: 0.25rem;
-}
-.rounded-r {
-  border-top-right-radius: 0.25rem;
-  border-bottom-right-radius: 0.25rem;
-}
 .border {
   border-width: 1px;
 }
@@ -1223,9 +1220,6 @@ select {
 }
 .border-r {
   border-right-width: 1px;
-}
-.border-l {
-  border-left-width: 1px;
 }
 .border-solid {
   border-style: solid;
@@ -1340,14 +1334,6 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(254 226 226 / var(--tw-bg-opacity));
 }
-.bg-red-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
-}
-.bg-blue-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(29 78 216 / var(--tw-bg-opacity));
-}
 .bg-opacity-40 {
   --tw-bg-opacity: 0.4;
 }
@@ -1444,9 +1430,6 @@ select {
 }
 .p-8 {
   padding: 2rem;
-}
-.p-1 {
-  padding: 0.25rem;
 }
 .px-4 {
   padding-left: 1rem;
@@ -1870,6 +1853,22 @@ select {
       transform: scale(1);
     }
   }
+.selection\:bg-greenc *::-moz-selection {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 191 165 / var(--tw-bg-opacity));
+}
+.selection\:bg-greenc *::selection {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 191 165 / var(--tw-bg-opacity));
+}
+.selection\:bg-greenc::-moz-selection {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 191 165 / var(--tw-bg-opacity));
+}
+.selection\:bg-greenc::selection {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 191 165 / var(--tw-bg-opacity));
+}
 .file\:mr-4::-webkit-file-upload-button {
   margin-right: 1rem;
 }
@@ -2015,14 +2014,6 @@ select {
 .hover\:bg-gray-700:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(55 65 81 / var(--tw-bg-opacity));
-}
-.hover\:bg-red-600:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
-}
-.hover\:bg-blue-600:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
 }
 .hover\:bg-opacity-95:hover {
   --tw-bg-opacity: 0.95;
@@ -2442,34 +2433,12 @@ select {
 }
 @media (min-width: 768px) {
 
-  .md\:mx-auto {
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .md\:mt-8 {
-    margin-top: 2rem;
-  }
-
   .md\:block {
     display: block;
   }
 
-  .md\:w-full {
-    width: 100%;
-  }
-
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
-  .md\:p-2 {
-    padding: 0.5rem;
-  }
-
-  .md\:text-base {
-    font-size: 1rem;
-    line-height: 1.5rem;
   }
 }
 @media (min-width: 1024px) {
