--- a/public/css/app.css
+++ b/public/css/app.css
@@ -669,6 +669,12 @@ select {
 .-z-10 {
   z-index: -10;
 }
+.col-span-2 {
+  grid-column: span 2 / span 2;
+}
+.col-span-1 {
+  grid-column: span 1 / span 1;
+}
 .row-span-2 {
   grid-row: span 2 / span 2;
 }
@@ -1073,6 +1079,9 @@ select {
 }
 .grid-flow-row {
   grid-auto-flow: row;
+}
+.grid-flow-row-dense {
+  grid-auto-flow: row dense;
 }
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
