--- a/public/css/app.css
+++ b/public/css/app.css
@@ -669,12 +669,6 @@ select {
 .-z-10 {
   z-index: -10;
 }
-.col-span-2 {
-  grid-column: span 2 / span 2;
-}
-.col-span-1 {
-  grid-column: span 1 / span 1;
-}
 .row-span-2 {
   grid-row: span 2 / span 2;
 }
@@ -1079,9 +1073,6 @@ select {
 }
 .grid-flow-row {
   grid-auto-flow: row;
-}
-.grid-flow-row-dense {
-  grid-auto-flow: row dense;
 }
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
@@ -1762,6 +1753,10 @@ select {
 .ring-black {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(25 25 25 / var(--tw-ring-opacity));
+}
+.ring-greenc {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(0 191 165 / var(--tw-ring-opacity));
 }
 .ring-opacity-5 {
   --tw-ring-opacity: 0.05;
