--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1754,10 +1754,6 @@ select {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(25 25 25 / var(--tw-ring-opacity));
 }
-.ring-greenc {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(0 191 165 / var(--tw-ring-opacity));
-}
 .ring-opacity-5 {
   --tw-ring-opacity: 0.05;
 }
@@ -2026,6 +2022,10 @@ select {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
+.hover\:text-greenh:hover {
+  --tw-text-opacity: 1;
+  color: rgb(0 140 121 / var(--tw-text-opacity));
+}
 .hover\:text-black:hover {
   --tw-text-opacity: 1;
   color: rgb(25 25 25 / var(--tw-text-opacity));
@@ -2161,13 +2161,13 @@ select {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(134 239 172 / var(--tw-ring-opacity));
 }
-.focus\:ring-orange-300:focus {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(253 186 116 / var(--tw-ring-opacity));
-}
 .focus\:ring-greenc:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(0 191 165 / var(--tw-ring-opacity));
+}
+.focus\:ring-orange-300:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(253 186 116 / var(--tw-ring-opacity));
 }
 .focus\:ring-indigo-200:focus {
   --tw-ring-opacity: 1;
